--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.24",
     "@types/react": "^16.9.17",
+    "acorn": "^6.0.0",
     "apollo-link-context": "^1.0.19",
     "date-fns": "1.30.1",
     "graphql": "^14.5.8",
